fix spacing with map controlers -- changed to CSS for display none/block because having one via css and one via JS creates invisible block space from div

--- a/gamify/gamify/static/css/main.css
+++ b/gamify/gamify/static/css/main.css
@@ -111,7 +111,7 @@ body {
 
 .sidebar.active {
     left: 10px;
-    width: 240px;
+    width: 270px;
 }
 
 .sidebar.diractive {
